[gd_scene load_steps=15 format=3 uid="uid://dqebgwtsvimo1"]

[ext_resource type="PackedScene" uid="uid://bjst4o6gm1itx" path="res://src/tool bar/tool_bar.tscn" id="1_snaf8"]
[ext_resource type="Script" path="res://src/main/main.gd" id="1_xgxop"]
[ext_resource type="PackedScene" uid="uid://cuo4hrlbi6mad" path="res://src/file_select/file_select.tscn" id="3_lnytl"]
[ext_resource type="PackedScene" uid="uid://dqa4sli25jwyo" path="res://src/views/list_view/list_view.tscn" id="4_dhugl"]
[ext_resource type="PackedScene" uid="uid://dldq0ga1ik6uj" path="res://src/views/others view/others_view.tscn" id="5_47xcn"]
[ext_resource type="Script" path="res://src/main/autosave.gd" id="6_sgx0x"]
[ext_resource type="PackedScene" uid="uid://c3e72nqckcm66" path="res://src/save_notification/save_notification.tscn" id="8_b5uhp"]
[ext_resource type="PackedScene" uid="uid://dt8j301x8sdfv" path="res://src/search window/search_window.tscn" id="9_wur27"]

[sub_resource type="Animation" id="Animation_tu7x6"]
resource_name = "fade cont"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_jynax"]
resource_name = "fade list"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("list_view:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("list_view:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_2icnf"]
resource_name = "fade other"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("others_view:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("others_view:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_xs5w7"]
resource_name = "unfade list"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("list_view:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("list_view:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_vcayx"]
resource_name = "unfade other"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("others_view:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("others_view:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_510ja"]
_data = {
"fade cont": SubResource("Animation_tu7x6"),
"fade list": SubResource("Animation_jynax"),
"fade other": SubResource("Animation_2icnf"),
"unfade list": SubResource("Animation_xs5w7"),
"unfade other": SubResource("Animation_vcayx")
}

[node name="main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_xgxop")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="tool_bar" parent="VBoxContainer" instance=ExtResource("1_snaf8")]
layout_mode = 2

[node name="file" parent="VBoxContainer/tool_bar/HBoxContainer" index="0"]
popup/item_2/id = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_vertical = 3

[node name="file_select" parent="VBoxContainer/HBoxContainer" instance=ExtResource("3_lnytl")]
clip_contents = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="list_view" parent="VBoxContainer/HBoxContainer" instance=ExtResource("4_dhugl")]
visible = false
layout_mode = 2

[node name="others_view" parent="VBoxContainer/HBoxContainer" instance=ExtResource("5_47xcn")]
visible = false
layout_mode = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="VBoxContainer/HBoxContainer"]
libraries = {
"": SubResource("AnimationLibrary_510ja")
}

[node name="autosave" type="Timer" parent="."]
script = ExtResource("6_sgx0x")

[node name="save_notification" parent="." instance=ExtResource("8_b5uhp")]
visible = false
layout_mode = 1
offset_top = -34.0
offset_bottom = 0.0

[node name="search_window" parent="." instance=ExtResource("9_wur27")]
visible = false
layout_mode = 1

[connection signal="translating" from="VBoxContainer/tool_bar" to="." method="_on_tool_bar_translating"]
[connection signal="request_search" from="VBoxContainer/tool_bar/HBoxContainer/search_button" to="." method="_on_search_button_request_search"]
[connection signal="selected_entry" from="VBoxContainer/HBoxContainer/file_select" to="." method="_on_file_select_selected_entry"]
[connection signal="timeout" from="autosave" to="autosave" method="_on_timeout"]

[editable path="VBoxContainer/tool_bar"]
[editable path="VBoxContainer/tool_bar/HBoxContainer/file/options"]
